# 2048game

./: CMakeLists.txt  README.md
2048game/: 2048draw.cpp  2048draw.h  2048game.cpp  2048game.h  2048main.cpp  2048statistics.cpp  2048statistics.h  CMakeLists.txt  structures.h
